# CoolControlOpenClient

./: .gitignore  AGENTS.md  cool_automation_client.py  devrequirements.txt  dictionaries.py  hvac_units_factory.py  requirements.txt  setup.cfg  setup.py  unit.py  updatable.py  websocket_test.py
.devcontainer/: Dockerfile  devcontainer.json
client/: README.md  setup.py
client/docs/: AdminsApi.md  AuthenticateRequestBody.md  AuthenticationApi.md  BadResponse401.md  BadResponse403.md  BadResponse404.md  ControlTreeResponseData.md  ControlTreeResponseDataCustomers.md  ControlTreeResponseDataCustomersCustomerIdSitesSiteId.md  CreateCustomerRequestBody.md  CreateSiteRequestBody.md  CreateUserRequestBody.md  CustomerApi.md  CustomerSitesApi.md  CustomerUsersApi.md  CustomersApi.md  CustomersResponse.md  CustomersResponseData.md  DeviceApi.md  DeviceUnitsApi.md  DevicesApi.md  DevicesResponseData.md  MeApi.md  ServicesApi.md  SiteApi.md  SiteDevicesApi.md  SiteSystemsApi.md  SiteUsersApi.md  SiteZonesApi.md  SitesApi.md  SitesResponse.md  SitesResponseData.md  SystemApi.md  SystemControlApi.md  SystemControlSwitchesBody.md  SystemResponse.md  SystemResponseData.md  SystemUnitsApi.md  SystemsApi.md  (+35 more)
cool_open_client/: cool_automation_client.py  hvac_units_factory.py  unit.py  ws_events.py
open_api/: CoolAPI-resolved.yaml
script/: build.sh  generate_client.bat  generate_client.sh  publish.sh
swagger_client/: .gitlab-ci.yml  .travis.yml  README.md  __init__.py  api_client.py  configuration.py  pyproject.toml  rest.py  setup.py  tox.ini
tests/: test_cool_open_client.py  test_get_updated_controllable_units.py  test_hvac_units_factory.py  test_ssl_context_passthrough.py  test_subscribe_unit_updates.py  test_websocket.py
utils/: singleton.py
(+490 files in other folders)
