[metadata]
name = cool-open-client
version = 0.0.1
author = Shay Gus
author_email = sgusin@gmail.com
description = This library will enable the use of the CoolAutomation API by third party projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShayGus/CoolControlOpenClient
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.10
include_package_data = True