# [metadata]
# name = cool-open-client
# version = 0.0.2
# author = Shay Gus
# author_email = sgusin@gmail.com
# description = This library will enable the use of the CoolAutomation API by third party projects
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/ShayGus/CoolControlOpenClient
# classifiers =
#     Programming Language :: Python :: 3.10
#     License :: OSI Approved :: Apache Software License
#     Operating System :: OS Independent
# [options]
# # package_dir=
# #      =src
# packages = find:
# python_requires = >=3.10
# include_package_data = True
# install_requires = 
#     certifi >= 14.05.14
#     six >= 1.10
#     python_dateutil >= 2.5.3
#     urllib3 >= 1.15.1
#     bidict >= 0.22.0
#     rel >= 0.4.7
#     websocket-client >= 1.3.3
#     marshmallow >= 3.17.0
#     marshmallow-dataclass >= 8.5.8
#     typeguard >= 2.13.3
#     cool_open_client/client/

# # dependency_links=['file:cool_open_client/client/setup.py']


# # [options.packages.find]
# # where = src/cool_open_client